k8s/dev-container/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-environment
  labels:
    name: dev-environment
    app.kubernetes.io/name: dev-environment
    app.kubernetes.io/part-of: infrastructure
